# openGL

./: CMakeLists.txt  themes.txt
include/: glad.h
lib/: glad.c
res/shaders/: Basic.shader
src/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp  renderer.cpp  renderer.h
